--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+/*.field_with_errors {
+  color: red;
+}*/
+/*
+#restaurant_name {
+  color: red;
+}*/
