--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -1,6 +1,9 @@
-// Place all the styles related to the restaurants controller here.
+/*// Place all the styles related to the restaurants controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+*/
+
 
 $primary-color: red;
 
